apps/python-backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-backend
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: nginx
  rules:
    - host: api.kyiv.uz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-backend
                port:
                  number: 80
  tls:
    - hosts:
        - api.kyiv.uz
      secretName: python-backend-tls
